tests/specs/ecosystem/bureaudouble/outils/0_0_47.test
bureaudouble/outils/0.0.47
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@bureaudouble/scripted@0.0.2": "jsr:@bureaudouble/scripted@0.0.2",
      "jsr:@std/assert@^0.221.0": "jsr:@std/assert@0.221.0",
      "jsr:@std/path@0.221": "jsr:@std/path@0.221.0",
      "npm:@epic-web/cachified@^5.1.2": "npm:@epic-web/cachified@5.2.0",
      "npm:clsx@2.1.0": "npm:clsx@2.1.0",
      "npm:kysely@0.27.2": "npm:kysely@0.27.2",
      "npm:mrmime@2.0.0": "npm:mrmime@2.0.0",
      "npm:tailwind-merge@2.2.2": "npm:tailwind-merge@2.2.2"
    },
    "jsr": {
      "@bureaudouble/scripted@0.0.2": {
        "integrity": "6ba53621ed24438e28f9949301f39eb0241e8746433b1465479b91c29475b58b"
      },
      "@std/assert@0.221.0": {
        "integrity": "a5f1aa6e7909dbea271754fd4ab3f4e687aeff4873b4cef9a320af813adb489a"
      },
      "@std/path@0.221.0": {
        "integrity": "0a36f6b17314ef653a3a1649740cc8db51b25a133ecfe838f20b79a56ebe0095",
        "dependencies": [
          "jsr:@std/assert@^0.221.0"
        ]
      }
    },
    "npm": {
      "@babel/runtime@7.24.5": {
        "integrity": "sha512-Nms86NXrsaeU9vbBJKni6gXiEXZ4CVpYVzEjDH9Sb8vmZ3UljyA1GSOJl/6LGPO8EHLuSF9H+IxNXHPX8QHJ4g==",
        "dependencies": {
          "regenerator-runtime": "regenerator-runtime@0.14.1"
        }
      },
      "@epic-web/cachified@5.2.0": {
        "integrity": "sha512-E/2LdIhS/wcn3ykV+u5xbTFahKtzReO0k4/cVtE7KBYiLCgR6bPRmlDUuyfWhbZX3zOmK+6OL7qdHkvgCWwSiA==",
        "dependencies": {}
      },
      "clsx@2.1.0": {
        "integrity": "sha512-m3iNNWpd9rl3jvvcBnu70ylMdrXt8Vlq4HYadnU5fwcOtvkSQWPmj7amUcDT2qYI7risszBjI5AUIUox9D16pg==",
        "dependencies": {}
      },
      "kysely@0.27.2": {
        "integrity": "sha512-DmRvEfiR/NLpgsTbSxma2ldekhsdcd65+MNiKXyd/qj7w7X5e3cLkXxcj+MypsRDjPhHQ/CD5u3Eq1sBYzX0bw==",
        "dependencies": {}
      },
      "mrmime@2.0.0": {
        "integrity": "sha512-eu38+hdgojoyq63s+yTpN4XMBdt5l8HhMhc4VKLO9KM5caLIBvUm4thi7fFaxyTmCKeNnXZ5pAlBwCUnhA09uw==",
        "dependencies": {}
      },
      "regenerator-runtime@0.14.1": {
        "integrity": "sha512-dYnhHh0nJoMfnkZs6GmmhFknAGRrLznOu5nc9ML+EJxGvrx6H7teuevqVqCuPcPK//3eDrrjQhehXVx9cnkGdw==",
        "dependencies": {}
      },
      "tailwind-merge@2.2.2": {
        "integrity": "sha512-tWANXsnmJzgw6mQ07nE3aCDkCK4QdT3ThPMCzawoYA2Pws7vSTCvz3Vrjg61jVUGfFZPJzxEP+NimbcW+EdaDw==",
        "dependencies": {
          "@babel/runtime": "@babel/runtime@7.24.5"
        }
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'DOMParserSupportedType'.
  mimeType?: DOMParserSupportedType;
             ~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/createVirtualNode.ts:4:14

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const partialTrigger = (node: HTMLElement, {}: {
                                     ~~~~~~~~~~~
    at file://<tmpdir>/fresh/createPartial.ts:1:38

TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
  server: Partial<Deno.ServeTlsOptions>;
                       ~~~~~~~~~~~~~~~
    at file://<tmpdir>/fresh/types.ts:72:24

Found 3 errors.

